--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,10 @@
 #
 #    pip-compile
 #
-matplotlib==3.2.1
-numpy==1.18.5
-pandas==1.0.4
-scipy==1.4.1              # via seaborn
 
+scipy==1.2.1              # via seaborn
+numpy==1.19.5
+pandas==1.0.5
+cartopy==0.17.0
+matplotlib==3.4.2
+sklearn==0.23.1
